syntax = "proto3";

package area_calculator;

option go_package = "example2/area_calculator/app";

service Calculator {
  rpc calculateMultiV2 (AreaRequestV2) returns (AreaResponse) {}
}

message ShapeMessageV2 {
  string shape = 1;
  repeated float dimensions = 2;
}

message AreaRequestV2 {
  repeated ShapeMessageV2 shapes = 1;
}

message AreaResponse {
  repeated float value = 1;
}
